# team-higgs

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.claude/agents/: em.md
.github/workflows/: terraform.yml
command_center/: __init__.py  config.py  db.py  errors.py  github.py  logging_config.py  main.py  openapi.json  openapi.py  schemas.py  security.py
command_center/auth/: __init__.py  oidc.py
command_center/frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
command_center/frontend/src/: App.tsx  index.css
command_center/frontend/src/api/: client.ts  hooks.ts  schema.d.ts  types.ts
command_center/frontend/src/components/: Shell.tsx  ToastProvider.tsx  atoms.tsx
command_center/frontend/src/lib/: format.test.ts  format.ts  nav.ts
command_center/frontend/src/views/: Approvals.test.tsx  Approvals.tsx  Backlog.test.tsx  Backlog.tsx  CreateTask.test.tsx  CreateTask.tsx  Improvement.tsx  Notes.test.tsx  Notes.tsx  Prs.tsx  Questions.tsx  Risks.tsx  Runs.tsx
command_center/routers/: __init__.py  approvals.py  auth.py  backlog.py  improvement.py  notes.py  state.py  tasks.py
db/: schema.sql
docs/: changelog.md  operating-model.md  stack-ai.md  stack-backend.md  stack-devops.md  stack-frontend.md  stack-ml.md
docs/design/: emctl-approval-mockup-v1.html
docs/prd/: emctl.md  plant-log.md
docs/reference/: emctl.md
emctl/: services.py
emctl/commands/: task.py
emctl/migrations/versions/: 0005_task_groom_rank.py  0006_notes.py  0007_decision_audit_note.py
emctl/repo/: decisions.py  notes.py  prs.py  reviews.py  risks.py  runs.py  tasks.py
infra/: README.md  cc-phase3-state-migration.md  ci.auto.tfvars  ci_iam.tf  command-center-cutover.md  command_center.tf  dns-cutover.md  dns.tf  higgs_command.tf  outputs.tf  sql.tf  terraform-ci.md  terraform.tfvars.example  variables.tf  wif.tf
tests/: conftest.py  test_migrate.py  test_risks.py
tests/command_center/: conftest.py  seed.py  test_approvals.py  test_auth.py  test_backlog_tasks.py  test_github.py  test_notes_state.py  test_oidc.py  test_security_headers.py
