[project]
name = "emctl"
version = "0.1.0"
description = "Platform state CLI for the agent engineering team."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12,<0.16",
    "psycopg[binary]>=3.2,<4",
    # Alembic drives migrations; it depends on SQLAlchemy, which env.py uses
    # directly to build a psycopg3 engine for the `migrate` command.
    "alembic>=1.13,<2",
    "sqlalchemy>=2.0,<3",
]

[project.scripts]
emctl = "emctl.cli:app"

[project.optional-dependencies]
# The command-center web service (task #27). Kept out of the base install so
# emctl (the CLI) never pulls FastAPI; the service reuses emctl's data layer.
web = [
    "fastapi>=0.111,<0.116",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "itsdangerous>=2.2",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["emctl*", "command_center*"]

[tool.setuptools.package-data]
emctl = ["migrations/*.py", "migrations/versions/*.py", "migrations/*.mako"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# UP042: keep `(str, Enum)` mixin enums — Typer renders their choices as the
# bare value; migrating to enum.StrEnum is a deferred cosmetic change.
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
# typer.Option/Argument in argument defaults is the framework's idiom.
"emctl/commands/*" = ["B008"]
# FastAPI's Depends()/Query() in argument defaults is the framework's idiom.
"command_center/*" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
# The command-center service uses Pydantic v2 models; the plugin teaches mypy
# how BaseSettings/BaseModel construct (env-driven, defaulted fields optional).
plugins = ["pydantic.mypy"]
# Third-party packages without bundled type info.
[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
